<?xml version="1.0"?>
<package>
  <name>camera_image_processing</name>
  <version>0.0.1</version>
  <description>
      Image processing nodes for mono and stereo cameras. 
  </description>

  <maintainer email="ivor.rendulic@gmail.com">Ivor Rendulic</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/diver_net</url> -->
  <author email="ivor.rendulic@gmail.com">Ivor Rendulic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_processing_util</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_processing_util</run_depend>

</package>
